fix: 操作数据库

--- a/views/ssb.ejs
+++ b/views/ssb.ejs
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%=message%></title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js" integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-    
+    <form action="#">
+        <input type="text" required />
+        <input type="text" required />
+        <button>123123</button>
+    </form>
+    <div src="" id="captcha" alt=""></div>
 </body>
+<script>
+    const form = document.querySelector('form');
+    axios.get('/user/get_image_code?a=1&b=2').then((res)=>{
+        document.getElementById('captcha').innerHTML = res.data;
+        console.log(res)
+    })
+</script>
 </html>
